--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "gta-5dm",
   "version": "0.1.0",
+  "homepage": "https://racingulitka.github.io/gta-5dm",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
