--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "framer-motion": "^11.0.3",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.5.3",
     "react-modal": "^3.16.1",
+    "react-scroll-parallax": "^3.4.5",
     "sass": "^1.69.7"
   },
   "devDependencies": {
