--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.3",
     "react-modal": "^3.16.1",
+    "react-scroll": "^1.9.0",
     "react-scroll-parallax": "^3.4.5",
     "sass": "^1.69.7"
   },
