--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-modal": "^3.16.1",
     "react-scroll": "^1.9.0",
     "react-scroll-parallax": "^3.4.5",
+    "react-sticky": "^6.0.3",
     "sass": "^1.69.7"
   },
   "devDependencies": {
