--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gta-5dm",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,6 +12,9 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.3",
+    "fs": "^0.0.1-security",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -19,15 +23,20 @@
     "react-scroll": "^1.9.0",
     "react-scroll-parallax": "^3.4.5",
     "react-sticky": "^6.0.3",
-    "sass": "^1.69.7"
+    "react-sticky-ts": "^1.0.7",
+    "reflect-metadata": "^0.2.1",
+    "sass": "^1.69.7",
+    "sequelize": "^6.36.0",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
+    "@types/react-sticky": "^6.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
