feat: add certs to nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,8 +20,8 @@ http {
         root /srv/public;
         server_tokens off;
 
-        ssl_certificate /etc/nginx/ssl/my_ssl_cert.crt;
-        ssl_certificate_key /etc/nginx/ssl/my_ssl_key.key;
+        ssl_certificate /etc/nginx/ssl/gta5dm.pro.crt;
+        ssl_certificate_key /etc/nginx/ssl/gta5dm.pro.key;
 
         location / {
             try_files $uri $uri/ @nextjs;
